# ROS_Hackathon_Xpecto26_World

./: CMakeLists.txt  package.xml
launch/: aerial_nav_env.launch.py
scripts/: autonomous_navigation.py  gate_detector.py  navigation_controller.py
worlds/: aerial_nav.world
